<resources>
    <string name="app_name">CarbnZero</string>
    <string name="LOGIN">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login">Login</string>
    <string name="mpg">MPG of your vehicle</string>


</resources>
